# lightning-hydra-template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  test.yml
src/: eval.py  train.py
src/data/: mnist_datamodule.py
src/utils/: __init__.py  logging_utils.py
tests/helpers/: run_if.py
